# scrapbox5

./: .gitignore  README.md
ml_sample/project_template/src/: docker-entrypoint.sh  pyproject.toml
ml_sample/project_template/src/api/: config.yml  main.py
ml_sample/project_template/src/api/estimator/: estimator.py
ml_sample/project_template/src/api/postprocessor/: __init__.py
ml_sample/project_template/src/api/preprocessor/: __init__.py  preprocessor.py
ml_sample/project_template/src/api/schema/: data.py
ml_sample/project_template/src/api/schema/request/: __init__.py  request.py
ml_sample/project_template/src/api/schema/response/: response.py
ml_sample/project_template/src/api/vectorizer/: __init__.py  vectorizer.py
ml_sample/project_template/src/api/vectorizer/components/: __init__.py  embarked.py
ml_sample/project_template/src/app/api/: config.yml  main.py  predictor.py
ml_sample/project_template/src/app/api/estimator/: estimator.py
ml_sample/project_template/src/app/api/preprocessor/: preprocessor.py
ml_sample/project_template/src/app/api/vectorizer/: vectorizer.py
ml_sample/project_template/src/app/batch/: config.yml  main.py
ml_sample/project_template/src/app/batch/dumpers/: __init__.py  model.py  vectorizer.py
ml_sample/project_template/src/app/batch/preprocessor/: preprocessor.py
ml_sample/project_template/src/batch/: config.yml  main.py
ml_sample/project_template/src/batch/dumpers/: __init__.py  model.py  vectorizer.py
ml_sample/project_template/src/batch/estimator/: __init__.py  estimator.py
ml_sample/project_template/src/batch/loaders/: titanic.py
ml_sample/project_template/src/batch/preprocessor/: __init__.py  ages.py  preprocessor.py
ml_sample/project_template/src/batch/schema/config/: batch.py
ml_sample/project_template/src/batch/vectorizer/: embarked.py  vectorizer.py
ml_sample/project_template/src/project_template/api/: __init__.py  config.yml  main.py
ml_sample/project_template/src/project_template/api/estimator/: __init__.py  estimator.py
ml_sample/project_template/src/project_template/api/postprocessor/: postprocessor.py
ml_sample/project_template/src/project_template/api/preprocessor/: preprocessor.py
ml_sample/project_template/src/project_template/api/vectorizer/: vectorizer.py
ml_sample/project_template/src/project_template/batch/: __init__.py  config.yml  main.py
ml_sample/project_template/src/project_template/batch/dumpers/: model.py  vectorizer.py
ml_sample/project_template/src/project_template/batch/estimator/: __init__.py
ml_sample/project_template/src/project_template/batch/loaders/: __init__.py
ml_sample/project_template/src/project_template/batch/preprocessor/: preprocessor.py
ml_sample/project_template/src/project_template/batch/vectorizer/: __init__.py
ml_sample/project_template/src/tests/api/: test_main.py  test_predictor.py
ml_sample/project_template/src/tests/api/estimator/: test_estimator.py
ml_sample/project_template/src/tests/api/postprocessor/: test_postprocessor.py
ml_sample/project_template/src/tests/api/preprocessor/: test_preprocessor.py
ml_sample/project_template/src/tests/api/vectorizer/: test_vectorizer.py
ml_sample/project_template/src/tests/batch/dumpers/: conftest.py  test_model.py  test_vectorizer.py
ml_sample/project_template/src/tests/batch/estimator/: test_classifier.py
ml_sample/project_template/src/tests/batch/loaders/: conftest.py  test_titanic.py
ml_sample/project_template/src/tests/batch/preprocessor/: conftest.py  (+1 more)
py_sample/example_taskipy/: README.md  pyproject.toml  runner.py
py_sample/example_taskipy/example_taskipy/app/: main.py
py_sample/example_taskipy/example_taskipy/app/calculator/: __init__.py  add.py  calculator.py  sub.py
py_sample/example_taskipy/example_taskipy/app/schema/: config.py
py_sample/example_taskipy/tests/app/calculator/: test_add.py  test_calculator.py  test_sub.py
py_sample/poet_with_pybind11/: README.md  build.py  pyproject.toml  setup.py
py_sample/poet_with_pybind11/cpp/: hello.cpp
py_sample/poet_with_pybind11/src/: main.py
py_sample/setup_scripts/: README.md  pyproject.toml
py_sample/setup_scripts/setup_scripts/: __init__.py  sub.py
rust_sample/sample_axum_testing/: Cargo.toml
rust_sample/sample_axum_unittests/: Cargo.toml  README.md
rust_sample/sample_axum_unittests/src/: api.rs  app.rs  index.rs  lib.rs  main.rs  message.rs  user.rs
rust_sample/sample_axum_unittests/tests/: test_api.rs  test_index.rs  utils.rs
rust_sample/sample_polars/: Cargo.toml  README.md
rust_sample/sample_polars/src/: main.rs
(+1463 files in other folders)
