[tool.poetry]
name = "example-taskipy"
version = "0.1.0"
description = ""
authors = ["Kyohei Watarai"]
readme = "README.md"
packages = [{include = "example_taskipy"}]

[tool.poetry.dependencies]
python = "^3.9"
taskipy = "^1.10.4"

[tool.taskipy.tasks]
app-runner = { cmd = "python runner.py" }
app-test = { cmd = "pytest" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
