[tool.poetry]
name = "poet_with_pybind11"
version = "0.1.0"
description = ""
authors = ["wararaki"]
packages = [
    {include = "poet-with-pybind11"}
]

[tool.poetry.dependencies]
python = "^3.9"
pybind11 = "^2.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
