[package]
name = "sample_polars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
write_output = ["polars/ipc", "polars/parquet"]
default = ["write_output"]

[dependencies]
polars = {version="0.24.2", features=["lazy", "csv-file", "ipc"]}
