[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["wararaki <ky7.ott.w@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.2.1"
pandas = "^1.5.3"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
httpx = "^0.23.3"
typer = {extras = ["all"], version = "^0.7.0"}
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
